--- a/src/app/home/sale/sale.component.html
+++ b/src/app/home/sale/sale.component.html
@@ -262,7 +262,9 @@
                                 </td>
                             </tr>
                             <tr class="sub-discount border-table-tr">
-                                <td class="availableQty">{{ 'Name' | translate }}</td>
+                                <td class="availableQty">{{ 'Name' | translate }}
+                                  <br> <small>({{ customer_balance }})</small>
+                                </td>
                                 <td>
                                     <input 
                                       enterFocus 
