--- a/src/app/home/sale/sale-list/sale-list.component.html
+++ b/src/app/home/sale/sale-list/sale-list.component.html
@@ -52,19 +52,19 @@
               <td>{{ item.customer_mobile }}</td>
               <td>{{ item.total_payble_amount }}</td>
               <td>
-                <a (click)="openModal(item.id, 'sale-modal')" id="item_id" class="btn btn-info"><i
-                    class="fa fa-eye"></i>
+                <a (click)="openModal(item.id, 'sale-modal')" id="item_id" class="btn btn-info" title="{{ 'Edit' | translate }}">
+                  <i class="fa fa-eye"></i>
                 </a>
                 &nbsp;
-                <a (click)="openModal(item.id, 'print-modal')" id="item_id" class="btn btn-warning"><i
-                    class="fa fa-file-pdf"></i>
+                <a (click)="openModal(item.id, 'print-modal')" id="item_id" class="btn btn-warning" title="{{ 'Invoice' | translate }}">
+                  <i class="fa fa-file-pdf"></i>
                 </a>
                 &nbsp;
-                <a (click)="openModalPos(item.id,'print-modal-pos')" id="item_id" class="btn btn-success">
+                <a (click)="openModalPos(item.id,'print-modal-pos')" id="item_id" class="btn btn-success" title="{{ 'Print' | translate }}">
                   <i class="fa fa-print"></i>
                 </a>
                 &nbsp;
-                <a (click)="openModal(item.id, 'sale-order-modal')" id="item_id" class="btn btn-info">
+                <a (click)="openModal(item.id, 'sale-order-modal')" id="item_id" class="btn btn-info" title="{{ 'Remarks' | translate }}">
                   <i class="fa fa-calendar"></i>
                 </a>
               </td>
@@ -734,7 +734,6 @@
                 <input 
                   autofocus
                   (input)="calculation()" 
-                  [disabled]="orderDetails.status === 'COMPLETE'" 
                   type="number" 
                   [(ngModel)]="orderDetails.discount" 
                   class="form-control" 
@@ -1017,7 +1016,7 @@
 
         <div class="row mb-4">
           <div [ngStyle]="{ color: colorCode }" class="col-8 text-left">
-            <h4>{{ orderDetails.branch_area }}, {{ orderDetails.branch_city }}</h4>
+            <h5>{{ orderDetails.branch_area }}, {{ orderDetails.branch_city }}</h5>
           </div>
           <div [ngStyle]="{ color: colorCode }" class="col-4">
             <strong># {{ orderDetails.invoice }}</strong>
@@ -1133,7 +1132,7 @@
                 {{ currency }}&nbsp;{{ orderDetails.discount | number: "1.2-2" }}
               </td>
             </tr>
-            <tr [ngStyle]="{ backgroundColor: colorCodeSuper, color: colorCodeText }">
+            <tr [ngStyle]="{ backgroundColor: colorCodeSuper, color: colorCodeText, border: '1px solid #5F6F76' }">
               <td colspan="2" class="thanku"  [ngStyle]="{ backgroundColor: colorCode, color: colorCodeText }">
                 {{ 'THANK YOU FOR YOUR BUSINESS' | translate }}
               </td>
@@ -1147,7 +1146,21 @@
                 {{ currency }} {{ orderDetails.total_payble_amount | number: "1.2-2"}}
               </td>
             </tr>
-            <tr>
+            <tr *ngIf="orderDetails.customer_balance">
+              <td colspan="2" class="text-left ml-2">{{ 'Opening Balance' | translate }}: &nbsp;&nbsp;<strong>{{ (orderDetails.customer_balance - orderDetails.total_due_amount) | number: "1.2-2" }}</strong></td>
+              <td *ngIf="freeQtyShow">&nbsp;</td>
+              <td *ngIf="tpShow">&nbsp;</td>
+              <td *ngIf="profitShow">&nbsp;</td>
+              <td colspan="3"></td>
+            </tr>
+            <tr *ngIf="orderDetails.customer_balance">
+              <td colspan="2" class="text-left ml-2">{{ 'Total Amount Due' | translate }}: &nbsp;<strong>{{ orderDetails.customer_balance | number: "1.2-2" }}</strong></td>
+              <td *ngIf="freeQtyShow">&nbsp;</td>
+              <td *ngIf="tpShow">&nbsp;</td>
+              <td *ngIf="profitShow">&nbsp;</td>
+              <td colspan="3"></td>
+            </tr>
+            <tr *ngIf="orderDetails.customer_balance === '' || orderDetails.customer_balance === 0">
               <td colspan="8">&nbsp;</td>
             </tr>
             <tr>
