--- a/src/app/home/customer/customer.component.html
+++ b/src/app/home/customer/customer.component.html
@@ -74,7 +74,7 @@
               <td>{{ item.name }}</td>
               <td>{{ item.email }}</td>
               <td>{{ item.mobile }}</td>
-              <td>{{ item.balance }}</td>
+              <td><strong>{{ item.balance }}</strong></td>
               <td>{{ item.address }}</td>
               <td>{{ item.status }}</td>
               <td>
