--- a/src/app/home/sale/sale.component.html
+++ b/src/app/home/sale/sale.component.html
@@ -923,7 +923,7 @@
 
         <div class="row mb-4">
           <div [ngStyle]="{ color: colorCode }" class="col-8 text-left">
-            <h4>{{ orderDetails.branch_area }}, {{ orderDetails.branch_city }}</h4>
+            <h5>{{ orderDetails.branch_area }}, {{ orderDetails.branch_city }}</h5>
           </div>
           <div [ngStyle]="{ color: colorCode }" class="col-4">
             <strong># {{ orderDetails.invoice }}</strong>
@@ -1039,7 +1039,7 @@
                 {{ currency }}&nbsp;{{ orderDetails.discount | number: "1.2-2" }}
               </td>
             </tr>
-            <tr [ngStyle]="{ backgroundColor: colorCodeSuper, color: colorCodeText }">
+            <tr [ngStyle]="{ backgroundColor: colorCodeSuper, color: colorCodeText, border: '1px solid #5F6F76' }">
               <td colspan="2" class="thanku"  [ngStyle]="{ backgroundColor: colorCode, color: colorCodeText }">
                 {{ 'THANK YOU FOR YOUR BUSINESS' | translate }}
               </td>
@@ -1053,7 +1053,21 @@
                 {{ currency }} {{ orderDetails.total_payble_amount | number: "1.2-2"}}
               </td>
             </tr>
-            <tr>
+            <tr *ngIf="orderDetails.customer_balance">
+              <td colspan="2" class="text-left ml-2">{{ 'Opening Balance' | translate }}: &nbsp;&nbsp;<strong>{{ (orderDetails.customer_balance - orderDetails.total_due_amount) | number: "1.2-2" }}</strong></td>
+              <td *ngIf="freeQtyShow">&nbsp;</td>
+              <td *ngIf="tpShow">&nbsp;</td>
+              <td *ngIf="profitShow">&nbsp;</td>
+              <td colspan="3"></td>
+            </tr>
+            <tr *ngIf="orderDetails.customer_balance">
+              <td colspan="2" class="text-left ml-2">{{ 'Total Amount Due' | translate }}: &nbsp;<strong>{{ orderDetails.customer_balance | number: "1.2-2" }}</strong></td>
+              <td *ngIf="freeQtyShow">&nbsp;</td>
+              <td *ngIf="tpShow">&nbsp;</td>
+              <td *ngIf="profitShow">&nbsp;</td>
+              <td colspan="3"></td>
+            </tr>
+            <tr *ngIf="orderDetails.customer_balance === '' || orderDetails.customer_balance === 0">
               <td colspan="8">&nbsp;</td>
             </tr>
             <tr>
